# agentic-AI--Projects

./: LiteLLM_penai_sdk.ipynb  README.md
crewai/hello_flow/: README.md  poem.txt  pyproject.toml
crewai/knowledge1/: README.md
crewai/liteLLm-proj/: .env  README.md
crewai/liteLLm-proj/src/litellm_proj/config/: agents.yaml  tasks.yaml
crewai/multi_agent/: README.md
crewai/multi_agent/src/multi_agent/: main2.py
hello-fastapi/: main.py  pyproject.toml  test_main.py
hello-fastapi2/: main.py  pyproject.toml  test_main.py
hello-fastapi3/: main.py  pyproject.toml
hello_agent/: README.md
hello_agent/src/hello_agent/: main.py
hello_agent2/: README.md  pyproject.toml
hello_agent2/src/hello_agent2/: main.py
knowledge1/: pyproject.toml
knowledge1/src/knowledge1/: main.py  main1.py
liteLLm-proj/: README.md
liteLLm-proj/src/litellm_proj/: __init__.py  main.py
liteLLm-proj/src/litellm_proj/teaching_crew/: teacing_crew.py
litellm1/: README.md  poem.txt  pyproject.toml
litellm1/src/litellm1/: main1.py
multi-work/hello_agent/: pyproject.toml
multi-work/hello_flow/src/hello_flow/: main.py
multi-work/knowledge1/src/knowledge1/: main.py
multi-work/liteLLm-proj/: pyproject.toml
multi-work/multi_agent/: poem.txt
multi-work/multi_agent/src/multi_agent/: main1.py
multi_agent/: pyproject.toml
multi_agent/src/multi_agent/: main.py  main1.py
openai_sdk/01_agents/: 01_basic_configuration.py  02_context.py  03_output_type.py  04_tools.py  05_agent_as_tool.py  06_crash_class_two.py  06_i_crash_class_dy_instruction.py  basic_agent.py  pyproject.toml
(+6 files in other folders)
