[project]
name = "litellm-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maryamamin12", email = "bamin0204@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.105.0",
    "crewai-tools>=0.37.0",
]

[project.scripts]
litellm-proj = "litellm_proj:main"
litellm = "litellm_proj.main:kickofff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
